# AurumAI

./: .gitignore  CURRENT_STATE.md  LICENSE  MEMORY.md  PROJECT_IDENTITY.md  PROJECT_NORTH_STAR.md  PROJECT_STATUS.md  README.md  ROADMAP.md  opencode.json  pyproject.toml
archive/: ADR_0004_CLOSURE_REPORT.md  AURUMAI_ENGINEERING_ASSESSMENT_2026-07-16.md  FCI_RESEARCH_REPORT.md  KNOWLEDGE_CHAIN_COMPLETION_REPORT.md  SPRINT_INTELLIGENCE_CORE_STABILIZATION_GATE.md
data/: gold.csv
docs/: 01_Project_Vision.md  02_Roadmap.md  04_Coding_Rules.md  08_AI_Agents.md  09_Progress.md  INDEX.md  OpenSource_Approved.md  PROJECT_CONSTITUTION.md
research/: institutional_integration_report.md  risk_intelligence_report.md
scripts/: download_dxy.py  download_fomc_calendar.py  dxy_capability.py  fix_cpi_calendar.py  gate6_validation.py  run_experiment_001.py  run_experiment_002.py  run_experiment_003.py  sprint_001.ps1  test_dxy_enricher.py
src/: main.py  test_memory.py
tests/: test_applicator.py  test_attribution_performance.py  test_benchmark.py  test_brain.py  test_causal_intelligence.py  test_compat.py  test_context_comparison.py  test_cross_event.py  test_decision_engine.py  test_decision_gate.py  test_dummy_event.py  test_dxy_context.py  test_economic.py  test_economic_intelligence.py  test_event_registry.py  test_evidence_engine.py  test_evidence_weighting.py  test_execution_commission.py  test_execution_engine.py  test_execution_portfolio.py  test_execution_slippage.py  test_expansion.py  test_experiment.py  test_experiment_002.py  test_experiment_registry.py  (+47 more)
(+293 files in other folders)
