[project]
name = "aurumai"
version = "0.0.1"
dependencies = [
    "fredapi",
    "networkx",
    "numpy",
    "pandas",
    "python-dotenv",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
