[project]
name = "aurumai"
version = "0.0.1"
description = "Market Intelligence Operating System for gold and macro markets"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "networkx",
    "statsmodels",
    "statsforecast",
    "feedparser",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
